--- a/SocEstimator/app/layouts/app.jl.html
+++ b/SocEstimator/app/layouts/app.jl.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Genie :: The Highly Productive Julia Web Framework</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
+    <div class="container">
     <%
       @yield
     %>
+    </div>
   </body>
 </html>
